--- a/doc/html css/假设高度已知，左右宽度固定，实现三栏布局的5种方法.md
+++ b/doc/html css/假设高度已知，左右宽度固定，实现三栏布局的5种方法.md
@@ -36,7 +36,7 @@
     </div>
 </div>
 ```
-<img src="../screenshot/html css/float.png">
+<img src="../../screenshot/html css/float.png">
 第一种解决方案基本上没有什么难度，平时应该也会用到很多！
 
 ## 第二种方法：absolute
@@ -78,7 +78,7 @@
     </div>
 </div>
 ```
-<img src="../screenshot/html css/absolute.png">
+<img src="../../screenshot/html css/absolute.png">
 
 第二种方法也是轻松实现效果。
 
@@ -118,7 +118,7 @@
     </div>
 </div>
 ```
-<img src="../screenshot/html css/flexbox.png">
+<img src="../../screenshot/html css/flexbox.png">
 
 ## 第四种方法：表格布局
 ```css
@@ -158,7 +158,7 @@
     </div>
 </div>
 ```
-<img src="../screenshot/html css/table.png">
+<img src="../../screenshot/html css/table.png">
 table方案同样实现，只是现在我们可能已经很少使用表格布局了。页面渲染性能也要差一点！
 
 ## 第五种方法：网格布局grid
@@ -196,7 +196,7 @@ table方案同样实现，只是现在我们可能已经很少使用表格布局
 </div>
 </body>
 ```
-<img src="../screenshot/html css/grid.png">
+<img src="../../screenshot/html css/grid.png">
 网格布局方法也实现了，CSS3的网格布局有点类似于bootstrap的栅格化布局，都是以网格的方式来划分元素所占的区块。
 
 问题没有结束，我们继续讨论。五种解决方案哪一个更好呢？笔者一直认为技术没有好坏之分，完全取决于你用在什么地方。
